# indian-banks

./: .gitignore  LICENSE  MANIFEST.in  PUBLISHING.md  README.md  pyproject.toml
.github/workflows/: publish-pypi.yml
assets/logos/: DLSC.avif  HCBL.avif  KNSB.avif
docs/: DATA.md
indian_banks/: __init__.py  banks.py
indian_banks/data/: banks.json
indian_banks/logos/: JPCB.avif  KACE.avif  KCCB1.avif  MUBL.avif
